# unpdf

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
bindings/csharp/Unpdf/: Unpdf.csproj
bindings/node/: Cargo.toml  napi.parallel.json  package-lock.json  package.json
bindings/node/src/: lib.rs
bindings/node/test/: smoke.mjs
bindings/python/: pyproject.toml
cli/: Cargo.toml
cli/src/: main.rs  writer.rs
src/: lib.rs
src/parser/: layout.rs  options.rs  stream.rs
src/render/: markdown.rs  mod.rs  streaming.rs
